# simple-slicer-comm

./: README.md
other_side/: matlab_send.m  matlab_send_transform.m
slicer_side/SimpleSlicerComm/: CMakeLists.txt
slicer_side/SimpleSlicerComm/Connections/: CMakeLists.txt  Connections.py
slicer_side/SimpleSlicerComm/Connections/Resources/UI/: Connections.ui
